--- a/style.css
+++ b/style.css
@@ -1,30 +1,81 @@
-body{
-    font-family: 'Open Sans', sans-serif;;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 32%, rgba(0,212,255,1) 100%);
-    color: antiquewhite;
-}
-#switch{
-    text-decoration: underline;
-    cursor: pointer;
-}
-a{
-    text-decoration: none;
-    color: antiquewhite;
+body {
+  font-family: sans-serif;
+  background: #182c61;
+  color: antiquewhite;
+  box-sizing: border-box;
+  transition: ease-in 0.5s;
 }
 
-.prf-pic{
-    height: 200px;
-    width: auto;
+a {
+  text-decoration: none;
+  color: antiquewhite;
 }
-h1{
-    text-align: center;
+
+.prf-pic {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
 }
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 85vh;
-    border: 2px solid;
-    border-radius: 10%;
+h1 {
+  text-align: center;
+  font-weight: 500;
+}
+h3,
+h5 {
+  font-size: 20px;
+  font-weight: 300;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+p {
+  text-align: justify;
+  padding: 0 20px 0 20px;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 80vh;
+  border: 2px solid;
+  border-radius: 10%;
+  margin: 20px;
+}
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.js-saved-container {
+  background-color: white;
+  border: 5px solid black;
+  min-height: 75px;
+  max-height: 150px;
+  height: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+.switch-btn,
+.main-btn {
+  border: hidden;
+  padding: 5px 10px 5px 10px;
+  margin-bottom: 10px;
+  font-size: large;
+}
+.main-btn{
+    font-size: xx-large;
+}
+span {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 15px;
+  padding: 6px;
+  cursor: pointer;
+  border-bottom: 2px solid;
 }
